--- a/Sunduk.PWA/Components/ChamferComponent.razor
+++ b/Sunduk.PWA/Components/ChamferComponent.razor
@@ -1,4 +1,9 @@
-﻿<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-3">
+﻿<style>
+    .monofield {
+        font-family: 'Roboto Mono', monospace;
+    }
+</style>
+<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-3">
     <MudGrid>
         <MudItem xs="12" xl="12">
             <MudGrid>
@@ -44,7 +49,7 @@
                     </MudItem>
                 </MudGrid>
                 <MudItem xs="12">
-                    <MudTextField Variant="Variant.Outlined" Style="font-family: Consolas" ReadOnly="true" Lines="ExampleLines" Value="@ChamferExample" />
+                    <MudTextField Variant="Variant.Outlined" Class="monofield" ReadOnly="true" Lines="ExampleLines" Value="@ChamferExample" />
                 </MudItem>
             </MudExpansionPanel>
         }
