сменил домен, чуток косметику поправил

--- a/Sunduk.PWA/Dialogs/ChangelogDialog.razor
+++ b/Sunduk.PWA/Dialogs/ChangelogDialog.razor
@@ -48,6 +48,7 @@
         Info.Add(new ChangelogInfo(new Version(1, 0, 2, 6), new DateTime(2021, 4, 6), new string[]{ "Добавил инструкции по \"установке\" на телефоны.", "Добавил скругления на фаске." }));
         Info.Add(new ChangelogInfo(new Version(1, 0, 3, 2), new DateTime(2021, 5, 12), new string[]{ "Переписал резьбу: добавил расчеты съемов, проходов. Сделал не фиксированный шаг. " +
             "Метрическая по ГОСТ 24705-2004. Трубная цилиндрическая по ГОСТ 6357-81.", "Добавил диалог с ченджлогом." }));
+        Info.Add(new ChangelogInfo(new Version(1, 0, 3, 4), new DateTime(2021, 9, 29), new string[] { "Переехал на новый адрес sunduk.one", "Чуток косметики и фиксов." }));
 
         Info.Reverse();
     }
