--- a/Sunduk.PWA/Pages/Index.razor
+++ b/Sunduk.PWA/Pages/Index.razor
@@ -52,7 +52,7 @@
                 </MudGrid>
             </MudPaper>
         </MudLink>
-        <MudLink Href="/timecalc" Underline="Underline.None">
+        @*<MudLink Href="/timecalc" Underline="Underline.None">
             <MudPaper Class="pa-8 ma-2">
                 <MudGrid Justify="Justify.Center">
                     <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.Timer" />
@@ -61,6 +61,6 @@
                     <MudText Typo="Typo.caption" Class="mt-4">Расчеты времени</MudText>
                 </MudGrid>
             </MudPaper>
-        </MudLink>
+        </MudLink>*@
     </MudGrid>
 </MudContainer>
