--- a/Sunduk.PWA/Pages/Index.razor
+++ b/Sunduk.PWA/Pages/Index.razor
@@ -12,7 +12,7 @@
                 </MudGrid>
             </MudPaper>
         </MudLink>
-        @*<MudLink Href="/nc" Underline="Underline.None">
+        <MudLink Href="/nc" Underline="Underline.None">
             <MudPaper Class="pa-8 ma-2">
                 <MudGrid Justify="Justify.Center">
                     <MudIcon Size="Size.Large" Icon="fas fa-digital-tachograph" />
@@ -21,7 +21,7 @@
                     <MudText Typo="Typo.caption" Class="mt-4">SunduCAM</MudText>
                 </MudGrid>
             </MudPaper>
-        </MudLink>*@
+        </MudLink>
         <MudLink Href="/thread" Underline="Underline.None">
             <MudPaper Class="pa-8 ma-2">
                 <MudGrid Justify="Justify.Center">
@@ -52,7 +52,7 @@
                 </MudGrid>
             </MudPaper>
         </MudLink>
-        @*<MudLink Href="/timecalc" Underline="Underline.None">
+        <MudLink Href="/timecalc" Underline="Underline.None">
             <MudPaper Class="pa-8 ma-2">
                 <MudGrid Justify="Justify.Center">
                     <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.Timer" />
@@ -61,6 +61,6 @@
                     <MudText Typo="Typo.caption" Class="mt-4">Расчеты времени</MudText>
                 </MudGrid>
             </MudPaper>
-        </MudLink>*@
+        </MudLink>
     </MudGrid>
 </MudContainer>
